# differential_dynamics

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md  WARP.md  pyproject.toml
csrc/: sigmoid_smoother.cpp  ssl_lite_smoother.cpp  ssl_smoother.cpp
differential_dynamics/: __init__.py
differential_dynamics/backends/: __init__.py
differential_dynamics/backends/torch/: envelope.py  gain.py  sigmoid_smoother_ext.py  ssl_smoother_ext.py
differential_dynamics/baselines/: classical_compressor.py
differential_dynamics/benchmarks/: __init__.py  bench_utilities.py  metrics.py  signals.py
differential_dynamics/training/: param_recovery_model.py  param_recovery_model_sll.py
docs/: CPU_SIGMOID_SMOOTHER_PLAN.md  REFERENCES.md  ROADMAP.md  analytic_dbd_notes.md  ssl_auto_release.md  training_plan.md
scripts/: analyze_difficulty.py  bench_forward.py  bench_forward_ssl.py  bench_sigmoid_smoother.py  calibrate_saltation.py  eval_params_rmse_db.py  make_dataset.py  make_dataset_SSL.py  make_dataset_classical_comp.py  make_dataset_ssl.py  test_sigmoid_smoother_parity.py  train_param_recovery.py  train_param_recovery_ssl.py
tests/: test_dab_jacobian.py  test_dbd_rates.py  test_expm_frechet_2x2.py  test_phi1_deriv.py  test_ssl_analytic_gradients.py  test_ssl_smoother_backward.py
